# maple

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  admins.txt  cabal.project  default.nix  maple.cabal  shell.nix  snippets  test_grouped.csv  test_groups.csv  test_loot.csv  test_loot_combine.csv
client/: comic.js  default.nix  node-packages.nix  package.json  tsconfig.json  webpack.config.js
client/loaders/: comic-image-loader.js
client/src/: APIClient.ts  App.tsx  Text.tsx  custom.d.ts  index.ejs  index.tsx  lootImageURL.ts  preloadImg.ts  types.ts  useCanvas.ts  useStorage.ts
client/src/admin/: AdminApp.tsx  Input.tsx  index.ejs  index.tsx
client/src/comic/: Comic.tsx  MapLoader.ts  MapRender.tsx  useDragPos.ts  useMapLoader.ts
client/src/extension/: index.ts  manifest.json
client/src/loot/: LootButton.tsx  LootPane.tsx  LootStateController.ts  ParticlePop.tsx  useLootState.ts
doc-gen/: Main.hs
src/Maple/: AABB.hs  Config.hs  Loot.hs  Map.hs  Session.hs  Staticize.hs  TextHintParser.hs  Web.hs
src/Maple/Storage/: Redis.hs  Ref.hs
src/Maple/Web/: API.hs  Admin.hs  Local.hs  Server.hs  Session.hs
test/: AABBTest.hs  MapleTest.hs  ParserTests.hs
